--- a/.readme.md
+++ b/.readme.md
@@ -2,6 +2,11 @@ Usage
 ---
 
 ```js
-var _ = require('min-fetch')
-```
+const fetch = require('min-fetch')
 
+fetch.init({
+  baseUrl: 'https://my.domain'
+})
+
+await {data} = fetch.get('/data')
+```
