--- a/.readme.md
+++ b/.readme.md
@@ -6,7 +6,7 @@ Usage
 ---
 
 ```js
-const http = require('min-fetch')
+import http from 'min-fetch'
 
 http.init({
   baseUrl: 'https://my.domain'
@@ -56,7 +56,7 @@ Interceptors / hook
 ---
 
 ```js
-const http = require('min-fetch')
+import http from 'min-fetch'
 
 http.init({
   baseUrl: 'https://my.domain'
