--- a/.readme.md
+++ b/.readme.md
@@ -1,6 +1,6 @@
 Inspired by [axios](https://github.com/axios/axios)
 
-Get axios request experience in `微信小程序`, `快应用`, `jQuery`
+Send Http Request just like axios in `微信小程序`, `快应用`, `jQuery`
 
 Usage
 ---
