--- a/.readme.md
+++ b/.readme.md
@@ -16,6 +16,68 @@ let {data} = await http.get('/data')
 ```
 
 
+Platform Support
+---
+
+### 微信小程序
+
+```js
+import http from 'min-fetch'
+
+http.init({
+  baseUrl: 'https://my.domain',
+  wx: wx
+})
+
+http.get('/data').then(({data}) => {
+  console.log(data)
+})
+```
+
+
+### 快应用
+
+```js
+import http from 'min-fetch'
+import fetch from '@system.fetch'
+
+http.init({
+  baseUrl: 'https://my.domain',
+  quickapp: fetch
+})
+
+http.get('/data').then(({data}) => {
+  console.log(data)
+})
+```
+
+### axios
+
+```js
+const axios = require('axios')
+import http from 'min-fetch'
+
+http.init({
+  baseUrl: 'https://my.domain',
+  axios: axios
+})
+
+let {data} = await http.get('/data')
+```
+
+### jQuery / Zepto
+
+```js
+import http from 'min-fetch'
+
+http.init({
+  baseUrl: 'https://my.domain',
+  jQuery: $
+})
+
+let {data} = await http.get('/data')
+```
+
 Config Params
 ---
 
