--- a/.readme.md
+++ b/.readme.md
@@ -133,3 +133,17 @@ http.interceptors.response.use(response => {
   return response
 })
 ```
+
+
+### Other Api
+
+You can stringify query string by
+
+```
+import http from 'min-fetch'
+
+http.qs.stringify({
+  query: 'string'
+})
+// => 'query=string'
+```
