--- a/.readme.md
+++ b/.readme.md
@@ -9,7 +9,7 @@ Usage
 import http from 'min-fetch'
 
 http.init({
-  baseUrl: 'https://my.domain'
+  baseURL: 'https://my.domain'
 })
 
 let {data} = await http.get('/data')
@@ -25,7 +25,7 @@ Platform Support
 import http from 'min-fetch'
 
 http.init({
-  baseUrl: 'https://my.domain',
+  baseURL: 'https://my.domain',
   wx: wx
 })
 
@@ -42,7 +42,7 @@ import http from 'min-fetch'
 import fetch from '@system.fetch'
 
 http.init({
-  baseUrl: 'https://my.domain',
+  baseURL: 'https://my.domain',
   quickapp: fetch
 })
 
@@ -58,7 +58,7 @@ const axios = require('axios')
 import http from 'min-fetch'
 
 http.init({
-  baseUrl: 'https://my.domain',
+  baseURL: 'https://my.domain',
   axios: axios
 })
 
@@ -71,7 +71,7 @@ let {data} = await http.get('/data')
 import http from 'min-fetch'
 
 http.init({
-  baseUrl: 'https://my.domain',
+  baseURL: 'https://my.domain',
   jQuery: $
 })
 
@@ -121,7 +121,7 @@ Interceptors / hook
 import http from 'min-fetch'
 
 http.init({
-  baseUrl: 'https://my.domain'
+  baseURL: 'https://my.domain'
 })
 
 http.interceptors.request.use(config => {
