--- a/.readme.md
+++ b/.readme.md
@@ -105,9 +105,10 @@ Request Config Params
 
 - `params` the url querystring object
 - `data` data for request body
-- `method` request http method
+- `method` request http method, default `GET`
 - `headers` request headers
 - `timeout` request timeout
+- `withCredentials` whether use cors, default `false`
 
 data will be stringify by the value of `headers['content-type']`
 
@@ -142,16 +143,16 @@ http.init({
 
 default is `JSON`
 
-Always stringify Data to `querystring`
-
-```js
-http.defaults.headers.post['Content-Type'] = 'application/x-www-form-urlencoded'
-```
-
 Always stringify Data to `JSON`
 
 ```js
 http.defaults.headers.post['Content-Type'] = 'application/json'
+```
+
+Always stringify Data to `querystring`, which can really work not like axios...
+
+```js
+http.defaults.headers.post['Content-Type'] = 'application/x-www-form-urlencoded'
 ```
 
 Interceptors / Hook
