--- a/.readme.md
+++ b/.readme.md
@@ -1,6 +1,6 @@
 Inspired by [axios](https://github.com/axios/axios)
 
-Send Http Request just like axios in `微信小程序`, `快应用`, `jQuery`, or event `XMLHttpRequest`
+Send Http Request just like axios in `微信小程序`, `快应用`, `jQuery`, or `XMLHttpRequest` by default
 
 Let's have the Same Experience with Request Data😜
 
@@ -14,17 +14,21 @@ http.init({
   baseURL: 'https://my.domain'
 })
 
-let {data} = await http.get('/data')
+http.get('/data').then(({data}) => {
+  console.log(data)
+})
 ```
 
+### Create Custom Http Instance
+
+```js
+const anotherHttp = http.create({
+  baseURL: 'https://my.domain'
+})
+```
 
 Api
 ---
-
-### Basic Request
-
-- `.request(config)`
-- `.request(url, config)`
 
 ### Simple Request
 
@@ -33,11 +37,20 @@ Api
 - `.head(url, config)`
 - `.options(url, config)`
 
+> Careful! There is no such api like `.get(url, params)`
+
 ### Request with Data
 
 - `.post(url, data, config)`
 - `.put(url, data, config)`
 - `.patch(url, data, config)`
+
+### Basic Request
+
+- `.request(config)`
+- `.request(url, config)`
+
+All config is not required
 
 
 Platform Support
@@ -69,10 +82,6 @@ http.init({
   baseURL: 'https://my.domain',
   quickapp: fetch
 })
-
-http.get('/data').then(({data}) => {
-  console.log(data)
-})
 ```
 
 ### axios
@@ -85,8 +94,6 @@ http.init({
   baseURL: 'https://my.domain',
   axios: axios
 })
-
-let {data} = await http.get('/data')
 ```
 
 ### jQuery / Zepto
@@ -98,8 +105,6 @@ http.init({
   baseURL: 'https://my.domain',
   jQuery: $
 })
-
-let {data} = await http.get('/data')
 ```
 
 Request Config Params
@@ -179,7 +184,7 @@ http.interceptors.response.use(response => {
 ```
 
 
-Real Project Usage
+Usage With Real Project
 ---
 
 Assume the `my.domain` service always return data like this
@@ -220,21 +225,6 @@ http.post('/user/1024', {
 })
 ```
 
-
-### Other Api
-
-You can stringify query string by
-
-```js
-import http from 'min-fetch'
-
-http.qs.stringify({
-  query: 'string'
-})
-// => 'query=string'
-```
-
-
 ### Usage with Vue.js
 
 ```js
@@ -248,4 +238,17 @@ submit () {
     this.user = data
   })
 }
+```
+
+### Other Api
+
+You can stringify query string by
+
+```js
+import http from 'min-fetch'
+
+http.qs.stringify({
+  query: 'string'
+})
+// => 'query=string'
 ```
