--- a/.readme.md
+++ b/.readme.md
@@ -71,7 +71,7 @@ http.get('/data').then(({data}) => {
 })
 ```
 
-> 可以直接复制 [fetch.js](src/fetch.js) 文件到项目中, 或通过[npm 支持](https://developers.weixin.qq.com/miniprogram/dev/devtools/npm.html?search-key=npm)
+> 请通过 npm 安装, 参见[npm 支持](https://developers.weixin.qq.com/miniprogram/dev/devtools/npm.html)
 
 ### 快应用
 
