all platform support headers

--- a/.readme.md
+++ b/.readme.md
@@ -129,7 +129,7 @@ Response Schema
 
 - `data` response data, will always try to `JSON.parse`, because most server not respect the response mime
 - `status` status code, number
-- `headers` only axios get headers
+- `headers` `name: value` headers, all header names are lower cased
 - `config` the request config
 
 Config Defaults / Init
