--- a/.readme.md
+++ b/.readme.md
@@ -27,6 +27,7 @@ const anotherHttp = http.create({
 })
 ```
 
+
 Api
 ---
 
@@ -50,7 +51,36 @@ Api
 - `.request(config)`
 - `.request(url, config)`
 
-All config is not required
+All config param is not required
+
+
+Request Object
+---
+
+- `data` data for request body
+- `headers` request headers
+- `method` request http method, default `GET`
+- `params` the url querystring object
+- `timeout` request timeout
+- `withCredentials` whether use cors, default `false`
+
+### Auto Handle Request Data
+
+data will be handled by the value of `headers['content-type']`
+
+Plain Object data will be auto stringify, data also support FormData, Blob, String
+
+- `application/json` will `JSON.stringify` the data object
+- `application/x-www-form-urlencoded` will `qs.stringify` the data object
+
+
+Response Object
+---
+
+- `data` response data, will always try to `JSON.parse`, because most server not respect the response mime
+- `headers` `name: value` headers, all header names are lower cased
+- `status` status code, number
+- `config` the request object
 
 
 Platform Support
@@ -117,29 +147,6 @@ http.init({
 })
 ```
 
-Request Object (Config)
----
-
-- `data` data for request body, will auto handle `Plain Object`, also support FormData, Blob, String
-- `headers` request headers
-- `method` request http method, default `GET`
-- `params` the url querystring object
-- `timeout` request timeout
-- `withCredentials` whether use cors, default `false`
-
-data will be stringify by the value of `headers['content-type']`
-
-- `application/json` will `JSON.stringify` the data object
-- `application/x-www-form-urlencoded` will `qs.stringify` the data object
-
-
-Response Object
----
-
-- `data` response data, will always try to `JSON.parse`, because most server not respect the response mime
-- `headers` `name: value` headers, all header names are lower cased
-- `status` status code, number
-- `config` the request object
 
 Config Defaults / Init
 ---
