--- a/.readme.md
+++ b/.readme.md
@@ -66,12 +66,12 @@ Request Object
 
 ### Auto Handle Request Data
 
-data will be handled by the value of `headers['content-type']`
-
-Plain Object data will be auto stringify, data also support FormData, Blob, String
+data will be handled by the value of `headers['content-type']`, Plain Object data will be auto stringify
 
 - `application/json` will `JSON.stringify` the data object
 - `application/x-www-form-urlencoded` will `qs.stringify` the data object
+
+data also support FormData, Blob, String
 
 
 Response Object
