rename to chunpu/http

--- a/.readme.md
+++ b/.readme.md
@@ -8,7 +8,7 @@ Usage
 ---
 
 ```js
-import http from 'min-fetch'
+import http from '@chunpu/http'
 
 http.init({
   baseURL: 'https://my.domain'
@@ -89,7 +89,7 @@ Platform Support
 ### 微信小程序
 
 ```js
-import http from 'min-fetch'
+import http from '@chunpu/http'
 
 http.init({
   baseURL: 'https://my.domain',
@@ -106,7 +106,7 @@ http.get('/data').then(({data}) => {
 ### 快应用
 
 ```js
-import http from 'min-fetch'
+import http from '@chunpu/http'
 import fetch from '@system.fetch'
 
 http.init({
@@ -128,7 +128,7 @@ http.init({
 
 ```js
 const axios = require('axios')
-import http from 'min-fetch'
+import http from '@chunpu/http'
 
 http.init({
   baseURL: 'https://my.domain',
@@ -139,7 +139,7 @@ http.init({
 ### jQuery / Zepto
 
 ```js
-import http from 'min-fetch'
+import http from '@chunpu/http'
 
 http.init({
   baseURL: 'https://my.domain',
@@ -183,7 +183,7 @@ Interceptors / Hook
 ---
 
 ```js
-import http from 'min-fetch'
+import http from '@chunpu/http'
 
 http.init({
   baseURL: 'https://my.domain'
@@ -217,7 +217,7 @@ Assume the `my.domain` service always return data like this
 ```
 
 ```js
-import http from 'min-fetch'
+import http from '@chunpu/http'
 
 http.init({
   baseURL: 'https://my.domain'
@@ -245,7 +245,7 @@ http.post('/user/1024', {
 ### Usage with Vue.js
 
 ```js
-import http from 'min-fetch'
+import http from '@chunpu/http'
 
 Vue.prototype.$http = http
 
@@ -262,7 +262,7 @@ submit () {
 You can stringify query string by
 
 ```js
-import http from 'min-fetch'
+import http from '@chunpu/http'
 
 http.qs.stringify({
   query: 'string'
