--- a/.readme.md
+++ b/.readme.md
@@ -1,3 +1,5 @@
+[![CircleCI](https://circleci.com/gh/chunpu/http.svg?style=svg)](https://circleci.com/gh/chunpu/http)
+
 Inspired by [axios](https://github.com/axios/axios)
 
 Send Http Request just like axios in `微信小程序`, `快应用`, `jQuery`, or `XMLHttpRequest` by default
