--- a/.readme.md
+++ b/.readme.md
@@ -248,7 +248,8 @@ http.post('/user/1024', {
 })
 ```
 
-### Usage with Vue.js
+Usage with Vue.js
+---
 
 ```js
 import http from '@chunpu/http'
@@ -263,7 +264,8 @@ submit () {
 }
 ```
 
-### Handling Errors
+Handling Errors
+---
 
 All Platform support timeout error for one request
 
@@ -275,7 +277,8 @@ http.get('/very/slow/api').catch(err => {
 })
 ```
 
-### Other Api
+Other Api
+---
 
 You can stringify query string by
 
