:memo: update readme

--- a/.readme.md
+++ b/.readme.md
@@ -207,6 +207,34 @@ http.interceptors.response.use(response => {
 ```
 
 
+Cancel Requests
+---
+
+compatible with axios Cancellation
+
+source is sth like deferred
+
+```js
+const source = http.CancelToken.source()
+
+http.get('/very/slow/api/1', {
+  cancelToken: source.token
+}).catch(err => {
+  console.error(err) // too slow, abort it
+})
+
+http.get('/very/slow/api/2', {
+  cancelToken: source.token
+}).catch(err => {
+  console.error(err) // too slow, abort it
+})
+
+setTimeout(() => {
+  source.cancel('too slow, abort it') // will cancel all requests with this source
+}, 1000)
+```
+
+
 Usage With Real Project
 ---
 
