:art: update readme

--- a/.readme.md
+++ b/.readme.md
@@ -130,7 +130,7 @@ http.init({
 ]
 ```
 
-### axios
+### axios (node.js)
 
 ```js
 const axios = require('axios')
@@ -141,6 +141,8 @@ http.init({
   axios: axios
 })
 ```
+
+Please use http with `axios mode` in Node.js platform
 
 ### jQuery / Zepto
 
