--- a/.readme.md
+++ b/.readme.md
@@ -222,17 +222,17 @@ const source = http.CancelToken.source()
 http.get('/very/slow/api/1', {
   cancelToken: source.token
 }).catch(err => {
-  console.error(err) // too slow, abort it
+  console.error(err) // error: cancel request
 })
 
 http.get('/very/slow/api/2', {
   cancelToken: source.token
 }).catch(err => {
-  console.error(err) // too slow, abort it
+  console.error(err) // error: cancel request
 })
 
 setTimeout(() => {
-  source.cancel('too slow, abort it') // will cancel all requests with this source
+  source.cancel('cancel request') // will cancel all requests with this source
 }, 1000)
 ```
 
